...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardCalendrier">

            <!-- Bouton Ajouter (vert foncé) -->
            <androidx.cardview.widget.CardView
                android:id="@+id/btnAjouter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="6dp"
                android:clickable="true"
                android:focusable="true"
...
